cabal-version:      2.4
name:               aoc2021
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         aaron@flipstone.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    ChangeLog.md
    README.md

executable aoc2021
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Util, D1, D2, D3, D4, D5, D6, D7, D8, D9, D10,
                   D11, D12, D13, D14, D15, D16, D17, D18, D19, D20,
                   D21, D22, D23, D24, D25

    default-extensions: OverloadedStrings, GHC2021, DerivingVia,
                        LambdaCase, ViewPatterns, MultiWayIf,
                        StrictData, LinearTypes
    build-depends:    base ^>=4.16.0.0,
                      bytestring,
                      containers,
                      linear-base,
                      vector,
                      mtl,
                      transformers,
                      array,
                      parsec
    hs-source-dirs:   app, src
    default-language: Haskell2010
